# PassMenSystem

./: Cargo.toml  README.md  טבלאות.docx
src/: main.rs  passwords_management_system.db
src/controllers/: categories_controller.rs  mod.rs  password_category_controller.rs  password_history_controller.rs  passwords_controller.rs  users_controller.rs
src/models/: categories.rs  mod.rs  password_category.rs  password_history.rs  passwords.rs  users.rs
src/routes/: category_routes.rs  mod.rs  password_category_routes.rs  password_history_routes.rs  password_routes.rs  user_routes.rs
src/utils/: encryption.rs  hash.rs  mod.rs
