[package]
name = "passwords_management_system"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
serde = "1.0.228"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono"] }
tokio = { version = "1.48.0", features = ["full"] }
uuid = "1.18.1"

#בשביל הTIMESTAMP
chrono = { version = "0.4", features = ["serde"] }

#בשביל ה HASH לסיסמה
argon2 = "0.4"
rand_core = { version = "0.6", features = ["getrandom"] }
dotenv = "0.15"

#הצפנה
aes-gcm = "0.10"
base64 = "0.21"